# HB-System

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG.md.md  CITATION.bib  CITATION.bib.bib  COMMERCIAL_LICENSE.md  COMMERCIAL_LICENSE.md.txt  CONTRIBUTING.md  CONTRIBUTING.md.md  README.md  RESEARCH.md  RESEARCH.md.md  ROADMAP.md.md  __init__.py.py  adapt_planner.py.py  agent_loop.py  agent_loop.py.py  demo.py  dockerfile  dockerfile..txt  edm_memory.py.py  external_llm_api.py  external_llm_api.py.py  license.txt  pyproject.toml  pyproject.toml.toml  requirements.txt  requirements.txt.txt  setup.cfg  setup.py  setup.py.py
.github/workflows/: publish.yml
assets/: README.md
docs/: api.md  api.md.md  guide.md  guide.md.md  index.html  metrics.md  metrics.md.md
examples/: basic_usage.py.py
github/workflows/: main.yml
githubworkflows/: ci.yml
hb_eval/: __init__.py.py  demo.py.py
hb_eval/core/: adapt_planner.py.py
hb_eval/utils/: __init__.py.py
hbeval/: __init__.py  demo.py
papers/: MANIFEST.in  README.md  paper EDM.pdf n3  paper HB eval.pdf n1  paper adapt plan.pdf n2
tasks/: task_definitions.yaml  task_definitions.yaml.yaml
