[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-eval-system"
version = "1.0.0"
description = "The Leading Behavioral Evaluation & Trustworthy Agentic AI Framework (Open-Core Edition)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abuelgasim Mohamed Ibrahim Adam", email = "hbevalframe@gmail.com"}
]
maintainers = [
    {name = "Abuelgasim Mohamed Ibrahim Adam", email = "hbevalframe@gmail.com"}
]
keywords = [
    "artificial-intelligence",
    "agentic-ai",
    "behavioral-evaluation",
    "trustworthy-ai",
    "machine-learning",
    "adaptive-planning",
    "memory-systems"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/hb-evalSystem/HB-System"
Documentation = "https://github.com/hb-evalSystem/HB-System#readme"
Repository = "https://github.com/hb-evalSystem/HB-System"
"Bug Tracker" = "https://github.com/hb-evalSystem/HB-System/issues"

[tool.setuptools]
packages = ["hb_eval", "hb_eval.core", "hb_eval.utils"]

[tool.setuptools.package-data]
hb_eval = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=hb_eval --cov-report=term-missing"
