[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hb-eval"
version = "2.0.0"
description = "Hybrid Behavioral Evaluation Framework for Embodied AI Agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["ai", "agents", "evaluation", "embodied-ai", "planning", "metrics"]
authors = [
    {name = "HB-Eval Team", email = "hbevalframe@gmail.com"}
]
maintainers = [
    {name = "HB-Eval Team", email = "hbevalframe@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/hb-evalSystem/HB-System"
Documentation = "https://github.com/hb-evalSystem/HB-System/blob/main/README.md"
Repository = "https://github.com/hb-evalSystem/HB-System"
Issues = "https://github.com/hb-evalSystem/HB-System/issues"
Changelog = "https://github.com/hb-evalSystem/HB-System/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["hb_eval", "hb_eval.core", "hb_eval.utils"]

[tool.setuptools.package-data]
hb_eval = ["py.typed"]
