[metadata]
name = hb-eval-system
version = 1.0.0
author =[ Abuelgasim Mohamed Ibrahim Adam ]
author_email = [ hbevalframe@gmail.com    ]
description = The Leading Behavioral Evaluation & Trustworthy Agentic AI Framework (Open-Core Edition)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hb-evalSystem/HB-System
project_urls =
    Bug Tracker = https://github.com/hb-evalSystem/HB-System/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.8
install_requires =
    # إضافة الاعتمادات الأساسية هنا (مثال)
    # pydantic>=2.0
    # requests

[options.packages.find]
exclude =
    tests*
    docs*
    papers*
